# Proto-Buffer

./: CMakeLists.txt  Proto Buffer.cpp  Proto Buffer.h  README.md  output.txt
ProtocCompiler/: AST.hpp  CompilerMain.cpp  Generator.cpp  Generator.hpp  Parser.cpp  Parser.hpp  Person.prt.cpp  Person.prt.hpp  ProtocSchema
ProtocCompiler/include/: AST.hpp  Generator.hpp  ProtoRuntime.hpp
ProtocCompiler/src/: CompilerMain.cpp  Generator.cpp  Parser.cpp
ProtocCompiler/tests/: test_parser.cpp
tests/: test_person.cpp
